Issue #55, include HASSH in Zeek plugins for SSH fingerprinting

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -1304,13 +1304,53 @@ filter {
     #############################################################################################################################
     # ssh.log
 
-    dissect {
-      id => "dissect_zeek_ssh"
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][version]}	%{[zeek_cols][auth_success]}	%{[zeek_cols][auth_attempts]}	%{[zeek_cols][direction]}	%{[zeek_cols][client]}	%{[zeek_cols][server]}	%{[zeek_cols][cipher_alg]}	%{[zeek_cols][mac_alg]}	%{[zeek_cols][compression_alg]}	%{[zeek_cols][kex_alg]}	%{[zeek_cols][host_key_alg]}	%{[zeek_cols][host_key]}	%{[zeek_cols][remote_location_country_code]}	%{[zeek_cols][remote_location_region]}	%{[zeek_cols][remote_location_city]}	%{[zeek_cols][remote_location_latitude]}	%{[zeek_cols][remote_location_longitude]}"
+    if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
+
+      # bitmap ssh.log field configuration version 0
+      #
+      # standard ssh.log without HASSH fingerprinting add-on script : 0x007FFFFF / 8388607
+      # ssh.log with HASSH fingerprinting add-on script :             0x3FFFFFFF / 1073741823
+
+      if ([@metadata][zeek_fields_bitmap_version] == 0) {
+
+        if ([@metadata][zeek_fields_bitmap] == 1073741823) {
+
+          dissect {
+            id => "dissect_zeek_ssh_with_all_fields_with_hassh"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][version]}	%{[zeek_cols][auth_success]}	%{[zeek_cols][auth_attempts]}	%{[zeek_cols][direction]}	%{[zeek_cols][client]}	%{[zeek_cols][server]}	%{[zeek_cols][cipher_alg]}	%{[zeek_cols][mac_alg]}	%{[zeek_cols][compression_alg]}	%{[zeek_cols][kex_alg]}	%{[zeek_cols][host_key_alg]}	%{[zeek_cols][host_key]}	%{[zeek_cols][remote_location_country_code]}	%{[zeek_cols][remote_location_region]}	%{[zeek_cols][remote_location_city]}	%{[zeek_cols][remote_location_latitude]}	%{[zeek_cols][remote_location_longitude]}	%{[zeek_cols][hasshVersion]}	%{[zeek_cols][hassh]}	%{[zeek_cols][hasshServer]}	%{[zeek_cols][cshka]}	%{[zeek_cols][hasshAlgorithms]}	%{[zeek_cols][sshka]}	%{[zeek_cols][hasshServerAlgorithms]}"
+            }
+          }
+
+        } else if ([@metadata][zeek_fields_bitmap] == 8388607) {
+
+          dissect {
+            id => "dissect_zeek_ssh_with_all_fields_no_hassh"
+            # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+            mapping => {
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][version]}	%{[zeek_cols][auth_success]}	%{[zeek_cols][auth_attempts]}	%{[zeek_cols][direction]}	%{[zeek_cols][client]}	%{[zeek_cols][server]}	%{[zeek_cols][cipher_alg]}	%{[zeek_cols][mac_alg]}	%{[zeek_cols][compression_alg]}	%{[zeek_cols][kex_alg]}	%{[zeek_cols][host_key_alg]}	%{[zeek_cols][host_key]}	%{[zeek_cols][remote_location_country_code]}	%{[zeek_cols][remote_location_region]}	%{[zeek_cols][remote_location_city]}	%{[zeek_cols][remote_location_latitude]}	%{[zeek_cols][remote_location_longitude]}"
+            }
+          }
+
+        } else {
+          # who knows? the ssh.log preprocessed bitmap is not one we're expecting, we've got to guess and cannot use dissect
+          mutate { id => "mutate_add_tag_dissect_failure_unknown_ssh_bitmap"
+                   add_tag => [ "_dissectfailure" ] }
+        }
+
+      } else {
+        # who knows? the ssh.log preprocessed bitmap field list version is not one we're expecting, we've got to guess and cannot use dissect
+        mutate { id => "mutate_add_tag_dissect_failure_unknown_bitmap_ssh_version"
+                 add_tag => [ "_dissectfailure" ] }
       }
+
+    } else {
+      # who knows? the ssh.log was not preprocessed to determine fields, we've got to guess and cannot use dissect
+      mutate { id => "mutate_add_tag_dissect_failure_missing_ssh_bitmap"
+               add_tag => [ "_dissectfailure" ] }
     }
+
     if ("_dissectfailure" in [tags]) {
       mutate {
         id => "mutate_split_zeek_ssh"
@@ -1319,7 +1359,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_ssh"
-        init => "$zeek_ssh_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'version', 'auth_success', 'auth_attempts', 'direction', 'client', 'server', 'cipher_alg', 'mac_alg', 'compression_alg', 'kex_alg', 'host_key_alg', 'host_key', 'remote_location_country_code', 'remote_location_region', 'remote_location_city', 'remote_location_latitude', 'remote_location_longitude' ]"
+        init => "$zeek_ssh_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'version', 'auth_success', 'auth_attempts', 'direction', 'client', 'server', 'cipher_alg', 'mac_alg', 'compression_alg', 'kex_alg', 'host_key_alg', 'host_key', 'remote_location_country_code', 'remote_location_region', 'remote_location_city', 'remote_location_latitude', 'remote_location_longitude', 'hasshVersion', 'hassh', 'hasshServer', 'cshka', 'hasshAlgorithms', 'sshka', 'hasshServerAlgorithms' ]"
         code => "event.set('[zeek_cols]', $zeek_ssh_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -1340,8 +1380,8 @@ filter {
 
       # bitmap ssl.log field configuration version 0
       #
-      # standard ssl.log fields without JA3 fingerprinting :    0x001FFFFF / 2097151
-      # ssl.log fields with ja3 and ja3s fields :               0x007FFFFF / 8388607
+      # standard ssl.log fields without add-on JA3 fingerprinting script :  0x001FFFFF / 2097151
+      # ssl.log fields with add-on JA3 fingerprinting script :              0x007FFFFF / 8388607
 
       if ([@metadata][zeek_fields_bitmap_version] == 0) {
 
@@ -3109,6 +3149,63 @@ filter {
         }
       }
     }
+
+    # HASSH stuff (see https://github.com/salesforce/hassh/tree/master/bro)
+
+    if ([zeek_ssh][hassh]) {
+      mutate {
+        id => "mutate_merge_zeek_ssh_hassh"
+        merge => {
+          "[ssh][hassh]" => "[zeek_ssh][hassh]"
+        }
+      }
+      mutate {
+        id => "mutate_add_field_zeek_ssh_hasshCnt"
+        add_field => {
+          "[ssh][hasshCnt]" => "1"
+        }
+      }
+      dissect {
+        id => "mutate_convert_field_zeek_ssh_hasshCnt"
+        convert_datatype => {
+          "[ssh][hasshCnt]" => "int"
+        }
+      }
+    }
+
+    if ([zeek_ssh][hasshServer]) {
+      mutate {
+        id => "mutate_merge_zeek_ssh_hasshServer"
+        merge => {
+          "[ssh][hasshServer]" => "[zeek_ssh][hasshServer]"
+        }
+      }
+      mutate {
+        id => "mutate_add_field_zeek_ssh_hasshServerCnt"
+        add_field => {
+          "[ssh][hasshServerCnt]" => "1"
+        }
+      }
+      dissect {
+        id => "mutate_convert_field_zeek_ssh_hasshServerCnt"
+        convert_datatype => {
+          "[ssh][hasshServerCnt]" => "int"
+        }
+      }
+    }
+
+    if ([zeek_ssh][hasshAlgorithms]) { mutate { id => "mutate_split_zeek_ssh_hasshAlgorithms"
+                                                split => { "[zeek_ssh][hasshAlgorithms]" => "," } } }
+
+    if ([zeek_ssh][hasshServerAlgorithms]) { mutate { id => "mutate_split_zeek_ssh_hasshServerAlgorithms"
+                                                      split => { "[zeek_ssh][hasshServerAlgorithms]" => "," } } }
+
+    if ([zeek_ssh][cshka]) { mutate { id => "mutate_split_zeek_ssh_cshka"
+                                      split => { "[zeek_ssh][cshka]" => "," } } }
+
+    if ([zeek_ssh][sshka]) { mutate { id => "mutate_split_zeek_ssh_sshka"
+                                      split => { "[zeek_ssh][sshka]" => "," } } }
+
 
   } else if ([source] == "ssl") {
     #############################################################################################################################
