fix session sort direction for new users

--- a/moloch/etc/user_settings.json
+++ b/moloch/etc/user_settings.json
@@ -16,7 +16,7 @@
       "detailFormat": "last",
       "showTimestamps": "last",
       "sortColumn": "start",
-      "sortDirection": "asc",
+      "sortDirection": "desc",
       "spiGraph": "protocol",
       "connSrcField": "srcIp",
       "connDstField": "dstIp",
