--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -6,8 +6,6 @@ version: '3.7'
 # Commonly tweaked configuration options
 #-------------------------------------------------------------------------------
 x-moloch-variables: &moloch-variables
-  # INITIALIZEDB should be 'true' on Moloch's first execution, and 'false' every other time
-  INITIALIZEDB : 'true'
   MANAGE_PCAP_FILES : 'false'
   ZEEK_AUTO_ANALYZE_PCAP_FILES : 'true'
   MOLOCH_ANALYZE_PCAP_THREADS : 1
@@ -15,7 +13,7 @@ x-moloch-variables: &moloch-variables
 
 x-logstash-variables: &logstash-variables
   # experimental java execution engine (https://www.elastic.co/blog/meet-the-new-logstash-java-execution-engine)
-  LOGSTASH_JAVA_EXECUTION_ENGINE : 'false'
+  LOGSTASH_JAVA_EXECUTION_ENGINE : 'true'
   LOGSTASH_OUI_LOOKUP  : 'true'
   LOGSTASH_REVERSE_DNS : 'false'
   # ES_EXTERNAL_HOSTS : '10.0.0.123:9200'
@@ -76,7 +74,7 @@ x-pcap-capture-variables: &pcap-capture-variables
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.1
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2
     restart: "no"
     hostname: elasticsearch
     environment:
@@ -105,7 +103,7 @@ services:
       - ./elasticsearch:/usr/share/elasticsearch/data:delegated
       - ./elasticsearch-backup:/opt/elasticsearch/backup:delegated
   kibana:
-    image: malcolmnetsec/kibana-oss:1.4.0
+    image: malcolmnetsec/kibana-oss:1.5.0
     restart: "no"
     hostname: kibana
     environment:
@@ -128,7 +126,7 @@ services:
         retries: 3
         start_period: 200s
   elastalert:
-    image: malcolmnetsec/elastalert:1.4.0
+    image: malcolmnetsec/elastalert:1.5.0
     restart: "no"
     hostname: elastalert
     environment:
@@ -152,7 +150,7 @@ services:
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
   curator:
-    image: malcolmnetsec/curator:1.4.0
+    image: malcolmnetsec/curator:1.5.0
     restart: "no"
     hostname: curator
     environment:
@@ -162,7 +160,7 @@ services:
     depends_on:
       - elasticsearch
   logstash:
-    image: malcolmnetsec/logstash-oss:1.4.0
+    image: malcolmnetsec/logstash-oss:1.5.0
     restart: "no"
     hostname: logstash
     environment:
@@ -190,7 +188,7 @@ services:
       - ./cidr-map.txt:/usr/share/logstash/config/cidr-map.txt:ro
       - ./host-map.txt:/usr/share/logstash/config/host-map.txt:ro
   filebeat:
-    image: malcolmnetsec/filebeat-oss:1.4.0
+    image: malcolmnetsec/filebeat-oss:1.5.0
     restart: "no"
     hostname: filebeat
     environment:
@@ -215,7 +213,7 @@ services:
       - ./filebeat/certs/client.crt:/certs/client.crt:ro
       - ./filebeat/certs/client.key:/certs/client.key:ro
   moloch:
-    image: malcolmnetsec/moloch:1.4.0
+    image: malcolmnetsec/moloch:1.5.0
     restart: "no"
     hostname: moloch
     env_file:
@@ -230,7 +228,6 @@ services:
       ES_PORT : 9200
       VIEWER : 'on'
       WISE : 'on'
-      WIPEDB : 'false'
     ulimits:
       memlock:
         soft: -1
@@ -248,7 +245,7 @@ services:
       - ./moloch-logs:/data/moloch/logs
       - ./moloch-raw:/data/moloch/raw
   file-monitor:
-    image: malcolmnetsec/file-monitor:1.4.0
+    image: malcolmnetsec/file-monitor:1.5.0
     restart: "no"
     hostname: filemon
     environment:
@@ -259,7 +256,7 @@ services:
       - ./zeek-logs/extract_files:/data/zeek/extract_files
       - ./zeek-logs/current:/data/zeek/logs
   pcap-capture:
-    image: malcolmnetsec/pcap-capture:1.4.0
+    image: malcolmnetsec/pcap-capture:1.5.0
     restart: "no"
     network_mode: host
     ulimits:
@@ -276,7 +273,7 @@ services:
     volumes:
       - ./pcap/upload:/pcap
   upload:
-    image: malcolmnetsec/file-upload:1.4.0
+    image: malcolmnetsec/file-upload:1.5.0
     restart: "no"
     hostname: upload
     env_file:
@@ -293,7 +290,7 @@ services:
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
   htadmin:
-    image: malcolmnetsec/htadmin:1.4.0
+    image: malcolmnetsec/htadmin:1.5.0
     restart: "no"
     hostname: htadmin
     environment:
@@ -305,7 +302,7 @@ services:
       - ./htadmin/metadata:/var/www/htadmin/config/metadata:rw
       - ./nginx/htpasswd:/var/www/htadmin/config/htpasswd:rw
   nginx-proxy:
-    image: malcolmnetsec/nginx-proxy:1.4.0
+    image: malcolmnetsec/nginx-proxy:1.5.0
     restart: "no"
     hostname: nginx-proxy
     depends_on:
