map zeek host.name (from beats) to moloch node field

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -3546,8 +3546,13 @@ filter {
   }
 
   # this identifies which node the log came from
-  mutate { id => "mutate_add_field_zeek_node"
-           add_field => { "[node]" => "zeek" } }
+  if ([host][name]) {
+    mutate { id => "mutate_add_field_host_name_node"
+             add_field => { "[node]" => "%{[host][name]}" } }
+  } else {
+    mutate { id => "mutate_add_field_zeek_node"
+             add_field => { "[node]" => "zeek" } }
+  }
 
   mutate { id => "mutate_rename_zeek_logType"
            rename => { "[source]" => "[zeek][logType]" } }
