Change mechanism by which JSON version of the document is viewed

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -60,3 +60,6 @@ logESRequests=true
 logFileCreation=true
 # temporarily disabling viewer autocomplete to see if it helps slugishness
 valueAutoComplete=false
+# enable right-click for ID field allowing viewing of JSON document for sessions and/or Zeek logs
+[right-click]
+JSON=url:sessions.json?expression=id=%TEXT%&fields=*;name:JSON;fields:id
