allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

--- a/kibana/kibana-offline-maps.yml
+++ b/kibana/kibana-offline-maps.yml
@@ -3,6 +3,8 @@
 
 server.name: kibana
 server.host: "0"
+server.basePath: "/kibana"
+server.rewriteBasePath: true
 elasticsearch.url: ${ELASTICSEARCH_URL}
 elasticsearch.requestTimeout: 180000
 kibana.defaultAppId: "dashboard/${KIBANA_DEFAULT_DASHBOARD}"
