--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -98,6 +98,14 @@ http {
       proxy_set_header Host moloch.malcolm.local;
     }
 
+    # Kibana shortcut
+    # already prepended /kibana to match the server.basePath in kibana's YML config file
+    location /kibana {
+      proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
     }
@@ -145,8 +153,16 @@ http {
       alias /etc/nginx/favicon.ico;
     }
 
-    location / {
+    # already prepended /kibana to match the server.basePath in kibana's YML config file
+    location /kibana {
       proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # otherwise, prepend /kibana to match the server.basePath in kibana's YML config file
+    location / {
+      proxy_pass http://docker-kibana/kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
