--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -161,6 +161,11 @@ http {
     }
 
     # otherwise, prepend /kibana to match the server.basePath in kibana's YML config file
+    location /app {
+      proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
     location / {
       proxy_pass http://docker-kibana/kibana;
       proxy_redirect off;
