allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,6 +105,12 @@ http {
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+    # otherwise (from links), prepend /kibana to match the server.basePath in kibana's YML config file
+    location /app {
+      proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -166,6 +172,8 @@ http {
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+
+    # otherwise (from links), prepend /kibana to match the server.basePath in kibana's YML config file
     location / {
       proxy_pass http://docker-kibana/kibana;
       proxy_redirect off;
