--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,7 +105,7 @@ http {
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
-    # otherwise (from links), prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
       proxy_redirect off;
@@ -166,14 +166,14 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise, prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise (from links), prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise prepend /kibana to match the server.basePath in kibana's YML config file
     location / {
       proxy_pass http://docker-kibana/kibana;
       proxy_redirect off;
