work in progress for nginx shortcuts

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -63,3 +63,4 @@ valueAutoComplete=false
 # enable right-click for ID field allowing viewing of JSON document for sessions and/or Zeek logs
 [right-click]
 JSON=url:sessions.json?expression=id=%TEXT%&fields=*;name:JSON;fields:id
+KIBANA=url:idmol2kib/_id=%TEXT%;name:Kibana;fields:id
