--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -99,12 +99,23 @@ http {
     }
 
     # Kibana shortcut
+
+    location ~* ^/idmol2kib\b(.*) {
+      # not working, work in progress
+      # see https://discuss.elastic.co/t/nginx-reverse-proxy-with-rewrite-and-app-kibana-discover/198461/1
+      rewrite ^/idmol2kib(.*) /kibana/app/kibana#/discover;
+      proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
     # already prepended /kibana to match the server.basePath in kibana's YML config file
     location /kibana {
       proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+
     # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
