development pull for 1.5.1 (#57)
* bump version for development

* map zeek host.name (from beats) to moloch node field

* fix typo

* sync sensor shared script with malcolm shared script

* Revert "map zeek host.name (from beats) to moloch node field"

This reverts commit 8599842465e0374afac9699b3a5c8057c38f9274.

The reason for this is because it breaks the source/destination RAW buttons to see the json of the event. Not sure which is more useful, but I'll probably have to remove one or the other

* Change mechanism by which JSON version of the document is viewed

* allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

* allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

* allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

* allow kibana to be accessed via "https://localhost:443/kibana" as well as the legacy "https://localhost:5601"

* standardize bookmarks for kibana dashboards to reflect server basepath

* work in progress for nginx shortcuts

* use volume for autozeek dir rather than local directory

* comment out work-in-progress kibana pivot from moloch

* Fixes for Malcolm to run better under windows, and Documentation changes to match

* bump elastic version to 6.8.3

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -77,18 +77,6 @@ http {
     auth_basic "Authentication Required";
     auth_basic_user_file /etc/nginx/.htpasswd;
 
-    # mapping the "Source Raw" and "Destination Raw" buttons for Zeek Logs
-    # to the Elasticsearch-provided JSON representation
-    #   eg., https://localhost/zeek/raw/180606-CXrRZv8dspxr7S2n7?type=src
-    location ~* ^/zeek/raw/(\d+:)?(\d+)-([^?/]+).* {
-      proxy_pass http://docker-elasticsearch/sessions2-$2/session/$2-$3?pretty=true;
-      proxy_redirect off;
-      sub_filter '\\t' '\t';
-      sub_filter 'application/json' 'text/plain';
-      sub_filter_types application/json;
-      sub_filter_once off;
-    }
-
     # Malcolm readme
     location /readme {
       proxy_pass http://docker-malcolm-readme/README.html;
@@ -108,6 +96,31 @@ http {
       proxy_pass http://docker-logstash-stats/_node/stats$1;
       proxy_redirect off;
       proxy_set_header Host moloch.malcolm.local;
+    }
+
+    # Kibana shortcut
+
+    location ~* ^/idmol2kib\b(.*) {
+      # not working, work in progress
+      # see https://discuss.elastic.co/t/nginx-reverse-proxy-with-rewrite-and-app-kibana-discover/198461/1
+      rewrite ^/idmol2kib(.*) /kibana/app/kibana#/discover;
+      proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # already prepended /kibana to match the server.basePath in kibana's YML config file
+    location /kibana {
+      proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
+    location /app {
+      proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
     }
 
     location = /favicon.ico {
@@ -157,8 +170,23 @@ http {
       alias /etc/nginx/favicon.ico;
     }
 
-    location / {
+    # already prepended /kibana to match the server.basePath in kibana's YML config file
+    location /kibana {
       proxy_pass http://docker-kibana;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
+    location /app {
+      proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # otherwise prepend /kibana to match the server.basePath in kibana's YML config file
+    location / {
+      proxy_pass http://docker-kibana/kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
