--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -60,3 +60,8 @@ logESRequests=true
 logFileCreation=true
 # temporarily disabling viewer autocomplete to see if it helps slugishness
 valueAutoComplete=false
+# enable right-click for ID field allowing viewing of JSON document for sessions and/or Zeek logs
+[right-click]
+JSON=url:sessions.json?expression=id=%TEXT%&fields=*;name:JSON;fields:id
+# still not working, work in progress:
+# KIBANA=url:idmol2kib/_id=%TEXT%;name:Kibana;fields:id
