fix sort order for new users

--- a/moloch/etc/user_settings.json
+++ b/moloch/etc/user_settings.json
@@ -46,7 +46,7 @@
         "order": [
           [
             "firstPacket",
-            "asc"
+            "desc"
           ]
         ],
         "visibleHeaders": [
