--- a/iso-build/vagrant/Vagrantfile
+++ b/iso-build/vagrant/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../..", "/malcolm-build"
 
   if Vagrant.has_plugin?("vagrant-vbguest")
-    config.vbguest.auto_update = true
+    config.vbguest.auto_update = false
   end
 
   config.vm.provider "virtualbox" do |vb|
