--- a/elastalert/sample-rules/notice-email.yaml
+++ b/elastalert/sample-rules/notice-email.yaml
@@ -1,10 +1,10 @@
-# Alert on all Weird Zeek logs
+# Alert (email) on all Notice Zeek logs (except SSL::Invalid_Server_Cert)
 #
 # see https://elastalert.readthedocs.io/en/latest/index.html
 # for rule trigger parameters, how to specify query for matching
 # events, transport and formatting for alerts, etc.
 
-name: weird
+name: notice
 
 ######################################
 # Rule parameters
@@ -12,10 +12,10 @@ name: weird
 ######################################
 type: any
 
-# Don't realert for 1 minute for the same connection ID/weird type
+# Don't realert for 5 minutes for the same connection ID/notice type
 realert:
-  minutes: 1
-query_key: [zeek.uid, zeek_weird.name]
+  minutes: 5
+query_key: [zeek.uid, zeek_notice.note]
 
 ######################################
 # Query parameters
@@ -27,21 +27,28 @@ timestamp_type: iso
 filter:
  - query:
       query_string:
-        query: "zeek.logType: weird"
+        query: "zeek.logType:notice AND (NOT zeek_notice.note:\"SSL::Invalid_Server_Cert\")"
 
 ######################################
 # Alert parameters
 # see https://elastalert.readthedocs.io/en/latest/ruletypes.html#alerts
 ######################################
-alert_subject: "weird-{}"
-alert_subject_args: ["zeek_weird.name"]
+alert_subject: "{0} notice from {1}"
+alert_subject_args: ["zeek_notice.note", "host.name"]
 
 alert_text_type: alert_text_only
-alert_text: "{0} [{1}]: {2}, {3}:{4} -> {5}:{6}"
-alert_text_args: ["@timestamp", "zeek.uid", "zeek_weird.name", "srcIp", "srcPort", "dstIp", "dstPort"]
-
-pipe_alert_text: true
+alert_text: "Network traffic captured by {0} generated a {1} notice at {2}: \"{3}\""
+alert_text_args: ["host.name", "zeek_notice.note", "zeek.ts", "zeek_notice.msg"]
 
 alert:
-  - command
-command: ["/bin/cat"]
+#  - command
+  - email
+#command: ["/bin/cat"]
+#pipe_alert_text: true
+email:
+  - "user@gmail.com"
+smtp_host: "smtp.gmail.com"
+smtp_port: 465
+smtp_ssl: true
+from_addr: "user@gmail.com"
+smtp_auth_file: "/opt/elastalert/smtp-auth.yaml"
