--- a/iso-build/config/includes.chroot/usr/share/applications/malcolm-cyberchef.desktop
+++ b/iso-build/config/includes.chroot/usr/share/applications/malcolm-cyberchef.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=1.0
 Name=Malcolm - CyberChef
-Exec=/usr/bin/chromium https://localhost/chef
+Exec=/usr/bin/chromium https://localhost/cyberchef/
 Terminal=false
 X-MultipleArgs=false
 Type=Application
