fix issue with new cyberchef not serving up Regex.js correctly

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ events { worker_connections 1024; }
 
 http {
 
+  include /etc/nginx/mime.types;
   sendfile on;
   client_max_body_size 20m;
   fastcgi_buffers 16 16k;
@@ -92,7 +93,6 @@ http {
     }
 
     # Kibana shortcut
-
     location ~* ^/idmol2kib\b(.*) {
       # not working, work in progress
       # see https://discuss.elastic.co/t/nginx-reverse-proxy-with-rewrite-and-app-kibana-discover/198461/1
@@ -118,6 +118,21 @@ http {
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
+    }
+
+    # Fix cyberchef JS module(s)
+    # https://localhost/moloch/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
+    location ~* ^/moloch/session/.*/(modules/.*\.js) {
+      proxy_hide_header Content-Type;
+      proxy_set_header Content-Type "application/javascript";
+      add_header Content-Type "application/javascript";
+      default_type application/javascript;
+      add_header X-Content-Type-Options 'nosniff';
+      proxy_pass http://docker-moloch/cyberchef/$1;
+      proxy_redirect off;
+      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header Authorization "";
     }
 
     location / {
