--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -115,6 +115,11 @@ http {
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+    location /api {
+      proxy_pass http://docker-kibana/kibana/api;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
@@ -188,6 +193,11 @@ http {
     # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+    location /api {
+      proxy_pass http://docker-kibana/kibana/api;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
