--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -109,14 +109,9 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise (from old kibana bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
-      proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
-    }
-    location /api {
-      proxy_pass http://docker-kibana/kibana/api;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
@@ -190,21 +185,10 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
-    location /app {
-      proxy_pass http://docker-kibana/kibana/app;
-      proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
-    }
-    location /api {
-      proxy_pass http://docker-kibana/kibana/api;
-      proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
-    }
-
     # otherwise prepend /kibana to match the server.basePath in kibana's YML config file
     location / {
-      proxy_pass http://docker-kibana/kibana;
+      rewrite ^/(.*) /kibana/$1;
+      proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
