--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -93,14 +93,34 @@ http {
     }
 
     # Kibana shortcut
-    location ~* ^/idmol2kib\b(.*) {
-      # not working, work in progress
-      # see https://discuss.elastic.co/t/nginx-reverse-proxy-with-rewrite-and-app-kibana-discover/198461/1
-      rewrite ^/idmol2kib(.*) /kibana/app/kibana#/discover;
+    location ~* ^/idmol2kib(.*) {
+
+      set $filter_start_time now-1d;
+      if ($arg_start != '') {
+        set $filter_start_time \'$arg_start\';
+      }
+
+      set $filter_stop_time now;
+      if ($arg_stop != '') {
+        set $filter_stop_time \'$arg_stop\';
+      }
+
+      set $filter_field undefined;
+      if ($arg_field != '') {
+        set $filter_field $arg_field;
+      }
+
+      set $filter_value undefined;
+      if ($arg_value != '') {
+        set $filter_value $arg_value;
+      }
+
+      rewrite ^/idmol2kib/(.*) /kibana/app/kibana#/discover?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
       proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
     location /kibana {
