--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,7 +106,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/kibana.Dockerfile
-    image: malcolmnetsec/kibana-oss:1.5.1
+    image: malcolmnetsec/kibana-oss:1.5.2
     restart: "no"
     hostname: kibana
     environment:
@@ -132,7 +132,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/elastalert.Dockerfile
-    image: malcolmnetsec/elastalert:1.5.1
+    image: malcolmnetsec/elastalert:1.5.2
     restart: "no"
     hostname: elastalert
     environment:
@@ -153,13 +153,14 @@ services:
         start_period: 200s
     volumes:
       - ./elastalert/config/elastalert.yaml:/opt/elastalert/config.yaml
+      - ./elastalert/config/smtp-auth.yaml:/opt/elastalert/smtp-auth.yaml:ro
       - ./elastalert/config/config.json:/opt/elastalert-server/config/config.json
       - ./elastalert/rules/:/opt/elastalert/rules/
   curator:
     build:
       context: .
       dockerfile: Dockerfiles/curator.Dockerfile
-    image: malcolmnetsec/curator:1.5.1
+    image: malcolmnetsec/curator:1.5.2
     restart: "no"
     hostname: curator
     environment:
@@ -174,7 +175,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/logstash.Dockerfile
-    image: malcolmnetsec/logstash-oss:1.5.1
+    image: malcolmnetsec/logstash-oss:1.5.2
     restart: "no"
     hostname: logstash
     environment:
@@ -212,7 +213,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/filebeat.Dockerfile
-    image: malcolmnetsec/filebeat-oss:1.5.1
+    image: malcolmnetsec/filebeat-oss:1.5.2
     restart: "no"
     hostname: filebeat
     environment:
@@ -241,7 +242,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/moloch.Dockerfile
-    image: malcolmnetsec/moloch:1.5.1
+    image: malcolmnetsec/moloch:1.5.2
     restart: "no"
     hostname: moloch
     env_file:
@@ -279,7 +280,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-monitor.Dockerfile
-    image: malcolmnetsec/file-monitor:1.5.1
+    image: malcolmnetsec/file-monitor:1.5.2
     restart: "no"
     hostname: filemon
     environment:
@@ -293,7 +294,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/pcap-capture.Dockerfile
-    image: malcolmnetsec/pcap-capture:1.5.1
+    image: malcolmnetsec/pcap-capture:1.5.2
     restart: "no"
     network_mode: host
     ulimits:
@@ -313,7 +314,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/file-upload.Dockerfile
-    image: malcolmnetsec/file-upload:1.5.1
+    image: malcolmnetsec/file-upload:1.5.2
     restart: "no"
     hostname: upload
     env_file:
@@ -330,7 +331,7 @@ services:
     volumes:
       - ./pcap/upload:/var/www/upload/server/php/chroot/files
   htadmin:
-    image: malcolmnetsec/htadmin:1.5.1
+    image: malcolmnetsec/htadmin:1.5.2
     build:
       context: .
       dockerfile: Dockerfiles/htadmin.Dockerfile
@@ -348,7 +349,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfiles/nginx.Dockerfile
-    image: malcolmnetsec/nginx-proxy:1.5.1
+    image: malcolmnetsec/nginx-proxy:1.5.2
     restart: "no"
     hostname: nginx-proxy
     depends_on:
