--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ events { worker_connections 1024; }
 
 http {
 
+  include /etc/nginx/mime.types;
   sendfile on;
   client_max_body_size 20m;
   fastcgi_buffers 16 16k;
@@ -84,13 +85,6 @@ http {
       proxy_set_header Host moloch.malcolm.local;
     }
 
-    # Direct inline CyberChef
-    location /chef {
-      proxy_pass http://docker-malcolm-readme/cyberchef.htm;
-      proxy_redirect off;
-      proxy_set_header Host moloch.malcolm.local;
-    }
-
     # Logstash statistics
     location ~* ^/logstash\b(.*) {
       proxy_pass http://docker-logstash-stats/_node/stats$1;
@@ -99,15 +93,34 @@ http {
     }
 
     # Kibana shortcut
+    location ~* ^/idmol2kib(.*) {
 
-    location ~* ^/idmol2kib\b(.*) {
-      # not working, work in progress
-      # see https://discuss.elastic.co/t/nginx-reverse-proxy-with-rewrite-and-app-kibana-discover/198461/1
-      rewrite ^/idmol2kib(.*) /kibana/app/kibana#/discover;
+      set $filter_start_time now-1d;
+      if ($arg_start != '') {
+        set $filter_start_time \'$arg_start\';
+      }
+
+      set $filter_stop_time now;
+      if ($arg_stop != '') {
+        set $filter_stop_time \'$arg_stop\';
+      }
+
+      set $filter_field undefined;
+      if ($arg_field != '') {
+        set $filter_field $arg_field;
+      }
+
+      set $filter_value undefined;
+      if ($arg_value != '') {
+        set $filter_value $arg_value;
+      }
+
+      rewrite ^/idmol2kib/(.*) /kibana/app/kibana#/discover?_g=(refreshInterval:(pause:!t,value:0),time:(from:$filter_start_time,mode:absolute,to:$filter_stop_time))&_a=(columns:!(_source),filters:!((meta:(alias:!n,disabled:!f,index:'sessions2-*',key:$filter_field,negate:!f,params:(query:'$filter_value',type:phrase),type:phrase,value:'$filter_value'),query:(match:($filter_field:(query:'$filter_value',type:phrase))))),index:'sessions2-*',interval:auto,query:(language:lucene,query:''),sort:!(firstPacket,desc)) redirect;
       proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
+
 
     # already prepended /kibana to match the server.basePath in kibana's YML config file
     location /kibana {
@@ -116,7 +129,7 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
+    # otherwise (from old kibana bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
       proxy_redirect off;
@@ -125,6 +138,21 @@ http {
 
     location = /favicon.ico {
       alias /etc/nginx/favicon.ico;
+    }
+
+    # Fix cyberchef JS module(s)
+    # https://localhost/moloch/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
+    location ~* ^/moloch/session/.*/(modules/.*\.js) {
+      proxy_hide_header Content-Type;
+      proxy_set_header Content-Type "application/javascript";
+      add_header Content-Type "application/javascript";
+      default_type application/javascript;
+      add_header X-Content-Type-Options 'nosniff';
+      proxy_pass http://docker-moloch/cyberchef/$1;
+      proxy_redirect off;
+      proxy_set_header Host moloch.malcolm.local;
+      proxy_set_header http_auth_http_user $remote_user;
+      proxy_set_header Authorization "";
     }
 
     location / {
@@ -177,16 +205,10 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-    # otherwise (from old bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
-    location /app {
-      proxy_pass http://docker-kibana/kibana/app;
-      proxy_redirect off;
-      proxy_set_header Host kibana.malcolm.local;
-    }
-
     # otherwise prepend /kibana to match the server.basePath in kibana's YML config file
     location / {
-      proxy_pass http://docker-kibana/kibana;
+      rewrite ^/(.*) /kibana/$1;
+      proxy_pass http://docker-kibana;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
