fix issue #62, mapping of Zeek values to Moloch's http.uri

--- a/logstash/pipeline-main/11_zeek_logs.conf
+++ b/logstash/pipeline-main/11_zeek_logs.conf
@@ -2381,10 +2381,20 @@ filter {
         }
       }
     }
-    if ([zeek_http][uri]) { mutate { id => "mutate_merge_zeek_http_uri"
-                                    merge => { "[http][uri]" => "[zeek_http][uri]" } } }
-    if ([zeek_http][referrer]) { mutate { id => "mutate_merge_zeek_http_referrer"
-                                         merge => { "[http][uri]" => "[zeek_http][referrer]" } } }
+    if ([zeek_http][uri]) {
+      if ([zeek_http][host]) {
+        mutate { id => "mutate_add_field_metadata_http_host_and_uri"
+                 add_field => { "[@metadata][http_uri]" => "%{[zeek_http][host]}%{[zeek_http][uri]}" } }
+        mutate { id => "mutate_merge_zeek_http_host_and_uri"
+                 merge => { "[http][uri]" => "[@metadata][http_uri]" } }
+      } else {
+        mutate { id => "mutate_merge_zeek_http_uri"
+                 merge => { "[http][uri]" => "[zeek_http][uri]" } }
+      }
+    } else if ([zeek_http][referrer]) {
+      mutate { id => "mutate_merge_zeek_http_referrer"
+      merge => { "[http][uri]" => "[zeek_http][referrer]" } }
+    }
     if ([http][uri]) {
       ruby {
         id => "ruby_zeek_http_uriCnt"
