fix issue #63, "View JSON Document" context action for ID field in Moloch does not display old data correctly bug moloch

--- a/moloch/etc/config.ini
+++ b/moloch/etc/config.ini
@@ -62,7 +62,7 @@ logFileCreation=true
 valueAutoComplete=false
 # enable right-click for ID field allowing viewing of JSON document for sessions and/or Zeek logs
 [right-click]
-JSON=url:sessions.json?expression=id=%TEXT%&fields=*;name:View JSON Document;fields:id
+JSON=url:sessions.json?expression=id=%TEXT%&fields=*&%DATE%;name:View JSON Document;fields:id
 KIBANA_CAT_IP=url:idmol2kib/filter?start=%ISOSTART%&stop=%ISOSTOP%&field=%DBFIELD%&value=%TEXT%;name:Filter %DBFIELD% in Kibana;category:ip
 KIBANA_CAT_PORT=url:idmol2kib/filter?start=%ISOSTART%&stop=%ISOSTOP%&field=%DBFIELD%&value=%TEXT%;name:Filter %DBFIELD% in Kibana;category:port
 KIBANA_CAT_COUNTRY=url:idmol2kib/filter?start=%ISOSTART%&stop=%ISOSTOP%&field=%DBFIELD%&value=%TEXT%;name:Filter %DBFIELD% in Kibana;category:country
